0.13.2.AN (Pre-Release):
-----------------------
- Fixes Nasty Memory Conflict
  * An item had been wrongly freed resulting in random crashes of chain-loaded external tools
  * This bug was introduced in v0.13.2.AC (Commit 6ed58c5)


0.13.2.AM (13 Dec 2021):
-----------------------
- Reverts Ported APFS Volume Group Identification
  * Does not appear the Volume Group information was correctly isolated and hence, not unique
  * Results in Mac OS volume instance conflicts
  * NOTE: Multi Instance APFS Container restrictions apply again


0.13.2.AL (12 Dec 2021):
-----------------------
- Adds "ExternalHiddenIcons" Feature
  * Sets RefindPlus to also scan external volumes for ".VolumeIcon" icons
  * This is a port of the downstream "AllHiddenIcons" feature by GitHub user @Joevt
  * Amended and renamed to reflect the target disk kind
- Improves "ScreenRGB" Feature
  * The handling of the embedded title banner has been improved by leveraging transparency
  * This significantly reduces the overall file size and ensures backgrounds are fully matched
  * This is a port of the downstream implementation by GitHub user @Joevt
- Fixes 'BootKicker' and 'CleanNvram' Amongst Others
  * Misc memory management defects had disabled both
- Fixes for 'BTRFS' and 'NTFS' Filesystem Drivers from GitHub user @Joevt
  * BTRFS: Fixes file creation date bug
  * NTFS: Fixes file creation date bug
  * NTFS: Fixed "attribute_sparse" and "attribute_encrypted" which were not testing those flags correctly
    - The field is a USHORT (Unsigned 16-bit integer) but was handled as a BYTE (Unsigned 8-bit integer)
  * NTFS: Fixes a bug where "read_attribute_direct" could write outside the attribute destination buffer.
    - "olen" can become negative and could be passed to "CopyMem", which requires an unsigned length.
- Improves 'SyncAPFS'
  * APFS Volume Groups can now be identified along with the earlier identified 'Disk Roles'
  * This significantly improves determination of APFS Volume Types/Roles